0025547: static class mehtods not exported in BrepMesh_GeomTool

Test case for issue CR25547